[package]
name = "marine_cli"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
greetd_ipc = { version = "0.10.3", features = ["sync-codec"] }
desktopparse = { path = "../desktopparse" }
once_cell = "1.21.3"
anyhow = "1.0.100"
xdg = "3.0.0"
thiserror = "2.0.17"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
rustyline = { version = "17.0.2", features = ["derive"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
